<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/product"
        android:layout_height="30dp"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/product_string"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/quantity"
        android:layout_height="30dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/quantity_string"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/price"
        android:layout_height="30dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/price_string"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="serif"/>

</LinearLayout>